# logitools

./: AUTHORS  README
liblogitech/: liblogitech.c  liblogitech.h
liblogitechcpp/: CMakeLists.txt  liblogitechcpp.pc.in
liblogitechcpp/cmake/Modules/: FindLibLogitechCPP.cmake
logitoolsd/logitoolsd/: main.c
